# soroban-quest--pioneer

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Makefile  README.md  rust-toolchain.toml
_client/: index.html  package-lock.json  package.json  webserver.ts
_squirtle/: bash-hook  bash-rpc-prompt  mod.ts  package-lock.json  package.json
client/: index.html  webserver.ts
quests/0-hello-world/: Cargo.toml  README.md  STORY.md
quests/1-hello-world/: Cargo.toml  README.md  STORY.md
quests/1-hello-world/src/: lib.rs  test.rs
squirtle/: mod.ts  package.json
